--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
 <section class="about-page">
   <div class="container">
-    <h1>About Spice Route</h1>
+    <h1 class="about_h1">About Spice Route</h1>
     <p>At Spice Route, we celebrate the rich culinary heritage of India by bringing authentic flavors and traditional recipes to your table. Founded in 2010, our mission is to provide an unforgettable dining experience that honors the diversity and depth of Indian cuisine.</p>
     <h2>Our Story</h2>
     <p>Our journey began with a passion for spices and a desire to share the vibrant tastes of India with the world. Our chefs use locally sourced ingredients and time-honored techniques to craft dishes that are both classic and innovative.</p>
