--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
       <div class="dish-card">
         <div class="dish-img" style="background-image: url('https://i.pinimg.com/1200x/09/3f/d2/093fd2d8376bf075e62fb84d05024d89.jpg');">
-          <div class="veg-nonveg-icon"><i class="fas fa-dot-circle veg"></i></div>
+          <div class="veg-nonveg-icon"><i class="fas fa-dot-circle non-veg"></i></div>
         </div>
         <h3>Butter Prawns</h3>
         <p>Succulent prawns, pan-seared to perfection, are simmered in our chef’s luxurious tomato-butter gravy — a silky blend of slow-cooked tomatoes, cream, cashews, and a hint of smoky spices.</p>
